force-app/main/default/objects/Clientes__c/Clientes__c.object-meta.xml
<CustomObject>
    <description>Se utiliza para registrar información de las personas.</description>
    <label>Cliente</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Nro de Cliente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>