force-app/main/default/objects/Clientes__c/fields/ADRESSEE__c.field-meta.xml
<CustomField>
    <fullName>ADRESSEE__c</fullName>
    <label>Remitir a</label>
    <length>255</length>
    <type>Text</type>
</CustomField>