force-app/main/default/objects/Clientes__c/fields/ALTERNATE_NAME__c.field-meta.xml
<CustomField>
    <fullName>ALTERNATE_NAME__c</fullName>
    <label>Nombre alternativo</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>