force-app/main/default/objects/Clientes__c/fields/BUSINESS__c.field-meta.xml
<CustomField>
    <fullName>BUSINESS__c</fullName>
    <label>Negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>