force-app/main/default/objects/Clientes__c/fields/CHANNEL_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_TYPE__c</fullName>
    <label>Tipo de Canal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>