force-app/main/default/objects/Clientes__c/fields/CONTACT__c.field-meta.xml
<CustomField>
    <fullName>CONTACT__c</fullName>
    <label>Contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>