force-app/main/default/objects/Clientes__c/fields/CONTRIBUTOR_VAT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CONTRIBUTOR_VAT_STATUS__c</fullName>
    <label>Situación ante el IVA del cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>