force-app/main/default/objects/Clientes__c/fields/CREDIT_LIMIT__c.field-meta.xml
<CustomField>
    <fullName>CREDIT_LIMIT__c</fullName>
    <label>Límite de Crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>