force-app/main/default/objects/Clientes__c/fields/CUIT__c.field-meta.xml
<CustomField>
    <fullName>CUIT__c</fullName>
    <label>CUIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>