force-app/main/default/objects/Clientes__c/fields/CURRENCY_CODE__c.field-meta.xml
<CustomField>
    <fullName>CURRENCY_CODE__c</fullName>
    <label>Código de Moneda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>