force-app/main/default/objects/Clientes__c/fields/CUST_INACTIVE_DATE__c.field-meta.xml
<CustomField>
    <fullName>CUST_INACTIVE_DATE__c</fullName>
    <label>Fecha Inactividad de Cliente</label>
    <type>Date</type>
</CustomField>