force-app/main/default/objects/Clientes__c/fields/CUSTOMER_GL_CODE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_GL_CODE__c</fullName>
    <label>Código de Clase de Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>