force-app/main/default/objects/Clientes__c/fields/CUSTOMER_ID__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_ID__c</fullName>
    <label>Id de Cliente</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>