force-app/main/default/objects/Clientes__c/fields/CUSTOMER_NAME__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_NAME__c</fullName>
    <label>Nombre de Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>