force-app/main/default/objects/Clientes__c/fields/CUSTOMER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_NUMBER__c</fullName>
    <externalId>true</externalId>
    <label>Número de Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>