force-app/main/default/objects/Clientes__c/fields/CUSTOMER_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_STATUS__c</fullName>
    <label>Estado de Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>