force-app/main/default/objects/Clientes__c/fields/DISTRI_CHANNEL__c.field-meta.xml
<CustomField>
    <fullName>DISTRI_CHANNEL__c</fullName>
    <label>Canal de Distribución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>