force-app/main/default/objects/Clientes__c/fields/EMPRESA__c.field-meta.xml
<CustomField>
    <fullName>EMPRESA__c</fullName>
    <label>Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>