force-app/main/default/objects/Clientes__c/fields/ENVIAR_EDI__c.field-meta.xml
<CustomField>
    <fullName>ENVIAR_EDI__c</fullName>
    <label>EDI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>