force-app/main/default/objects/Clientes__c/fields/GERENCIA__c.field-meta.xml
<CustomField>
    <fullName>GERENCIA__c</fullName>
    <label>Gerencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>