force-app/main/default/objects/Clientes__c/fields/GLN__c.field-meta.xml
<CustomField>
    <fullName>GLN__c</fullName>
    <label>Dirección EDI</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>