force-app/main/default/objects/Clientes__c/fields/LAST_ORDER_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_ORDER_DATE__c</fullName>
    <label>Fecha de Última Orden</label>
    <type>Date</type>
</CustomField>