force-app/main/default/objects/Clientes__c/fields/LAST_TRANSACTION_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_TRANSACTION_DATE__c</fullName>
    <label>Fecha de Última Transacción</label>
    <type>Date</type>
</CustomField>