force-app/main/default/objects/Clientes__c/fields/MAIL__c.field-meta.xml
<CustomField>
    <fullName>MAIL__c</fullName>
    <label>Correo Electrónico</label>
    <type>Email</type>
</CustomField>