force-app/main/default/objects/Clientes__c/fields/NRO_IIBB__c.field-meta.xml
<CustomField>
    <fullName>NRO_IIBB__c</fullName>
    <label>Nro de IIBB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>