force-app/main/default/objects/Clientes__c/fields/ORDER_CREDIT_LIMIT__c.field-meta.xml
<CustomField>
    <fullName>ORDER_CREDIT_LIMIT__c</fullName>
    <label>Límite Crédito de Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>