force-app/main/default/objects/Clientes__c/fields/ORDER_TYPE_ID__c.field-meta.xml
<CustomField>
    <fullName>ORDER_TYPE_ID__c</fullName>
    <label>Id de Tipo de pedido de Venta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>