force-app/main/default/objects/Clientes__c/fields/ORG_ID__c.field-meta.xml
<CustomField>
    <fullName>ORG_ID__c</fullName>
    <label>Org Id</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>