force-app/main/default/objects/Clientes__c/fields/PARTY_ID__c.field-meta.xml
<CustomField>
    <fullName>PARTY_ID__c</fullName>
    <label>Id de Parte en Oracle</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>