force-app/main/default/objects/Clientes__c/fields/PARTY_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PARTY_NUMBER__c</fullName>
    <label>Número de Organización</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>