force-app/main/default/objects/Clientes__c/fields/PAYMENT_TERM__c.field-meta.xml
<CustomField>
    <fullName>PAYMENT_TERM__c</fullName>
    <label>Término de Pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>