force-app/main/default/objects/Clientes__c/fields/PHONE__c.field-meta.xml
<CustomField>
    <fullName>PHONE__c</fullName>
    <label>Teléfono</label>
    <length>255</length>
    <type>Text</type>
</CustomField>