force-app/main/default/objects/Clientes__c/fields/POSTAL_CODE__c.field-meta.xml
<CustomField>
    <fullName>POSTAL_CODE__c</fullName>
    <label>Código Postal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>