force-app/main/default/objects/Clientes__c/fields/PRICE_LIST__c.field-meta.xml
<CustomField>
    <fullName>PRICE_LIST__c</fullName>
    <label>Lista de Precios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>