force-app/main/default/objects/Clientes__c/fields/PRICE_LIST_ID__c.field-meta.xml
<CustomField>
    <fullName>PRICE_LIST_ID__c</fullName>
    <label>Id lista de Precios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>