force-app/main/default/objects/Clientes__c/fields/QUOTE_CHANNEL__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_CHANNEL__c</fullName>
    <label>Canal de Cuota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>