force-app/main/default/objects/Clientes__c/fields/RECEIVABLES_ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>RECEIVABLES_ACCOUNT__c</fullName>
    <label>Cuentas a Cobrar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>