force-app/main/default/objects/Clientes__c/fields/RELATED_LOCATION__c.field-meta.xml
<CustomField>
    <fullName>RELATED_LOCATION__c</fullName>
    <label>Descripción de Relación de Sucursales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>