force-app/main/default/objects/Clientes__c/fields/RELATED_SITE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>RELATED_SITE_DESCRIPTION__c</fullName>
    <label>RELATED SITE DESCRIPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>