force-app/main/default/objects/Clientes__c/fields/RELATED_SITE_USE__c.field-meta.xml
<CustomField>
    <fullName>RELATED_SITE_USE__c</fullName>
    <label>Relación de Sucursales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>