force-app/main/default/objects/Clientes__c/fields/REVENUE_ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>REVENUE_ACCOUNT__c</fullName>
    <label>Cuentas de ingreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>