force-app/main/default/objects/Clientes__c/fields/SALES_CHANNEL__c.field-meta.xml
<CustomField>
    <fullName>SALES_CHANNEL__c</fullName>
    <label>Canal de Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>