force-app/main/default/objects/Clientes__c/fields/SALES_ORDER_NAME__c.field-meta.xml
<CustomField>
    <fullName>SALES_ORDER_NAME__c</fullName>
    <label>Nombre de Tipo de Pedido de Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>