force-app/main/default/objects/Clientes__c/fields/SALES_TERRITORY__c.field-meta.xml
<CustomField>
    <fullName>SALES_TERRITORY__c</fullName>
    <label>Territorio de Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>