force-app/main/default/objects/Clientes__c/fields/SITE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>SITE_DESCRIPTION__c</fullName>
    <label>Descripción de Sucursal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>