force-app/main/default/objects/Clientes__c/fields/SITE_INACTIVE_DATE__c.field-meta.xml
<CustomField>
    <fullName>SITE_INACTIVE_DATE__c</fullName>
    <label>Fecha Inactividad de Sucursal</label>
    <type>Date</type>
</CustomField>