force-app/main/default/objects/Clientes__c/fields/SITE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>SITE_NUMBER__c</fullName>
    <label>Número de Sitio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>