force-app/main/default/objects/Clientes__c/fields/SITE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>SITE_STATUS__c</fullName>
    <label>Estado de la Sucursal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>