force-app/main/default/objects/Clientes__c/fields/SITE_USE_CODE__c.field-meta.xml
<CustomField>
    <fullName>SITE_USE_CODE__c</fullName>
    <label>Código uso de sitio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>