force-app/main/default/objects/Clientes__c/fields/SITE_USE_ID__c.field-meta.xml
<CustomField>
    <fullName>SITE_USE_ID__c</fullName>
    <label>Id de uso del sitio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>