force-app/main/default/objects/Clientes__c/fields/SUB_SALES_CHANNEL__c.field-meta.xml
<CustomField>
    <fullName>SUB_SALES_CHANNEL__c</fullName>
    <label>Sub Canal de Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>