force-app/main/default/objects/Clientes__c/fields/TAX_CLASSIFICATION__c.field-meta.xml
<CustomField>
    <fullName>TAX_CLASSIFICATION__c</fullName>
    <label>Clasificación Impositiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>