force-app/main/default/objects/Clientes__c/fields/WAREHOUSE_ID__c.field-meta.xml
<CustomField>
    <fullName>WAREHOUSE_ID__c</fullName>
    <label>Id del Warehouse de la sucursal de envío</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>