force-app/main/default/objects/Clientes__c/fields/WAREHOUSE_NAME__c.field-meta.xml
<CustomField>
    <fullName>WAREHOUSE_NAME__c</fullName>
    <label>Warehouse de la sucursal de envio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>