force-app/main/default/objects/Clientes__c/fields/ZONE__c.field-meta.xml
<CustomField>
    <fullName>ZONE__c</fullName>
    <label>Zona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>